--- a/MetalDraw_mac/Main/Base.lproj/Main.storyboard
+++ b/MetalDraw_mac/Main/Base.lproj/Main.storyboard
@@ -711,7 +711,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="D7r-uz-kIZ" customClass="MetalDrawView" customModule="MetalDraw_mac" customModuleProvider="target">
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="D7r-uz-kIZ" customClass="MetalicView" customModule="MetalDraw_mac" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                             </customView>
                         </subviews>
@@ -722,6 +722,9 @@
                             <constraint firstItem="D7r-uz-kIZ" firstAttribute="leading" secondItem="ERx-hH-rdd" secondAttribute="leading" id="gaU-ws-HyH"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="metalicView" destination="D7r-uz-kIZ" id="d6c-Cp-sNU"/>
+                    </connections>
                 </viewController>
                 <customObject id="2Tp-Fl-jBw" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
